--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -7703,3 +7703,12 @@ th.hide-for-touch {
 .touch th.show-for-touch {
   display: table-cell !important;
 }
+
+/* line 4, ../scss/app.scss */
+footer {
+  position: fixed;
+  bottom: 3px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
