--- a/js/templatesfolder/blog.handlebars
+++ b/js/templatesfolder/blog.handlebars
@@ -1,7 +1,9 @@
-<div class="page">
-	<div class="box">
+<div class="row">
+	<div class="large-8 columns">
+		<img src="http://placekitten.com/637/500" alt="">
+	</div>
+	<div class="large-4 columns">
 		<h1>Blog</h1>
 		<p>I'm don't really have a blog, but I made an interactive blog site where you can play games with the blog content. <a href="http://movemywords.com/" target="_blank">Check it out</a>!</p>
-		<img src="images/me-silly.jpg" alt="">
 	</div>
 </div>
