--- a/js/templatesfolder/about.handlebars
+++ b/js/templatesfolder/about.handlebars
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="large-8 columns">
-		<img src="http://placekitten.com/637/500" alt="">
+		<img src="images/me-pensive.jpg" alt="">
 	</div>
 	<div class="large-4 columns">
 		<h1>About Scott</h1>
