--- a/js/templatesfolder/apps.handlebars
+++ b/js/templatesfolder/apps.handlebars
@@ -1,7 +1,7 @@
 
 <div class="row">
 	<div class="large-8 columns">
-		<img src="http://placekitten.com/637/500" alt="">
+		<img src="images/me-sepia.jpg" alt="">
 	</div>
 	<div class="large-4 columns">
 		<h1>Apps</h1>
