--- a/js/templatesfolder/blog.handlebars
+++ b/js/templatesfolder/blog.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="large-8 columns">
-		<img src="http://placekitten.com/637/500" alt="">
+		<img src="images/me-inquisitive.jpg" alt="">
 	</div>
 	<div class="large-4 columns">
 		<h1>Blog</h1>
