--- a/js/templatesfolder/experimental.handlebars
+++ b/js/templatesfolder/experimental.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="large-8 columns">
-		<img src="http://placekitten.com/637/500" alt="">
+		<img src="images/me-silly.jpg" alt="">
 	</div>
 	<div class="large-4 columns">
 		<h1>Experimental</h1>
