--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -7705,10 +7705,25 @@ th.hide-for-touch {
 }
 
 /* line 4, ../scss/app.scss */
-footer {
-  position: fixed;
-  bottom: 3px;
-  left: 0;
-  width: 100%;
+* {
+  margin: 0;
+}
+
+/* line 8, ../scss/app.scss */
+html, body {
+  height: 100%;
+}
+
+/* line 12, ../scss/app.scss */
+.wrapper {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  margin: 0 auto -4em;
+}
+
+/* line 19, ../scss/app.scss */
+footer, .push {
+  height: 4em;
   text-align: center;
 }
