experimenting with menu cancel

--- a/js/templatesfolder/about.handlebars
+++ b/js/templatesfolder/about.handlebars
@@ -1,10 +1,8 @@
 
 
 <div class="row">
-	<div class="large-8 columns">
-		<img src="images/me-pensive.jpg" alt="">
-	</div>
-	<div class="large-4 columns">
+	
+	<div class="medium-4 medium-push-8 columns">
 		<h1>About Scott</h1>
 		<p>Hello! I am a full-stack web developer specializing in Ruby on Rails, Javascript, and Python. I love to compose and play music, sing karaoke, and cook almost as much as I love to code!</p>
 		<div>
@@ -19,6 +17,9 @@
 		<div>
 			<p>See what I tweet at Twitter: <a class="contact-link" href="https://twitter.com/scottlnorvell" target="_blank">@scottlnorvell</a></p>
 		</div>
-		
+	</div>
+
+	<div class="medium-8 medium-pull-4 columns">
+		<img src="images/me-pensive.jpg" alt="">
 	</div>
 </div>
