--- a/js/templatesfolder/apps.handlebars
+++ b/js/templatesfolder/apps.handlebars
@@ -1,13 +1,15 @@
 
 <div class="row">
-	<div class="large-8 columns">
-		<img src="images/me-sepia.jpg" alt="">
-	</div>
-	<div class="large-4 columns">
+	
+	<div class="medium-4 medium-push-8 columns">
 		<h1>Apps</h1>
 		<p>Take a look at some of my recent projects:</p>
 		<h6><a href="http://sound-ocean.com" target="_blank">Sound Ocean</a></h6>
 		<h6><a href="http://movemywords.com" target="_blank">Move My Words</a></h6>
 		<h6><a href="http://abcrowd-composers.herokuapp.com" target="_blank">ABCrowd Composers</a></h6>
+	</div>
+	
+	<div class="medium-8 medium-pull-4 columns">
+		<img src="images/me-sepia.jpg" alt="">
 	</div>
 </div>
