--- a/js/templatesfolder/blog.handlebars
+++ b/js/templatesfolder/blog.handlebars
@@ -1,9 +1,9 @@
 <div class="row">
-	<div class="large-8 columns">
-		<img src="images/me-inquisitive.jpg" alt="">
-	</div>
-	<div class="large-4 columns">
+	<div class="medium-4 medium-push-8 columns">
 		<h1>Blog</h1>
 		<p>I'm don't really have a blog, but I made an interactive blog site where you can play games with the blog content. <a href="http://movemywords.com/" target="_blank">Check it out</a>!</p>
+	</div>
+	<div class="medium-8 medium-pull-4 columns">
+		<img src="images/me-inquisitive.jpg" alt="">
 	</div>
 </div>
