--- a/js/templatesfolder/experimental.handlebars
+++ b/js/templatesfolder/experimental.handlebars
@@ -1,12 +1,13 @@
 <div class="row">
-	<div class="large-8 columns">
-		<img src="images/me-silly.jpg" alt="">
-	</div>
-	<div class="large-4 columns">
+	<div class="medium-4 medium-push-8 columns">
 		<h1>Experimental</h1>
 		<p>Here are some fringe and experimental small-scale projects:</p>
 		<h6><a href="http://scottlnorvell.com/makeallthecirclesgray/" target="_blank">Make All The Circles Gray</a></h6>
 		<h6><a href="http://scottlnorvell.com/my_first_d3_visualization/" target="_blank">Smoke Monster</a></h6>
 		<h6><a href="http://scottlnorvell.com/kinetic_fun/" target="_blank">Another Circle Game</a></h6>
+	</div>
+
+	<div class="medium-8 medium-pull-4 columns">
+		<img src="images/me-silly.jpg" alt="">
 	</div>
 </div>
