--- a/js/templatesfolder/experimental.handlebars
+++ b/js/templatesfolder/experimental.handlebars
@@ -1,13 +1,22 @@
 <div class="row">
-	<div class="medium-4 medium-push-8 columns">
+	<div class="medium-6 medium-push-6 columns">
 		<h1>Experimental</h1>
 		<p>Here are some fringe and experimental small-scale projects:</p>
-		<h6><a href="http://scottlnorvell.com/makeallthecirclesgray/" target="_blank">Make All The Circles Gray</a></h6>
-		<h6><a href="http://scottlnorvell.com/my_first_d3_visualization/" target="_blank">Smoke Monster</a></h6>
-		<h6><a href="http://scottlnorvell.com/kinetic_fun/" target="_blank">Another Circle Game</a></h6>
+		<h3><a href="http://scottlnorvell.com/makeallthecirclesgray/" target="_blank">Make All The Circles Gray</a></h3>
+		<h5 class="project-techs">Technologies: KineticJS, jQuery</h5>
+		<p>Why NOT make all the circles gray? Make All The Circles Gray is an infinitely recursive game where making all of the circles gray is only the beginning. Chooses a difficulty level and hover over all of the circles to turn them gray.</p>
+
+		<h3><a href="http://scottlnorvell.com/my_first_d3_visualization/" target="_blank">Smoke Monster</a></h3>
+		<h5 class="project-techs">Technologies: KineticJS, jQuery</h5>
+		<p>Why NOT make all the circles gray? Make All The Circles Gray is an infinitely recursive game where making all of the circles gray is only the beginning. Chooses a difficulty level and hover over all of the circles to turn them gray.</p>
+
+		<h3><a href="http://scottlnorvell.com/kinetic_fun/" target="_blank">Another Circle Game</a></h3>
+		<h5 class="project-techs">Technologies: KineticJS</h5>
+		<p>An abstract game of beautiful designs. As you move the mouse, the red circle follows. When you click the blue circle, it mutates the blue blob. The trick is to see how many times you can click the blue cicle without getting touched by the red circle...</p>
+
 	</div>
 
-	<div class="medium-8 medium-pull-4 columns">
+	<div class="medium-6 medium-pull-6 columns">
 		<img src="images/me-silly.jpg" alt="">
 	</div>
 </div>
