--- a/js/templatesfolder/apps.handlebars
+++ b/js/templatesfolder/apps.handlebars
@@ -3,17 +3,17 @@
 	
 	<div class="medium-4 medium-push-8 columns">
 		<h1>Apps</h1>
-		<p>Take a look at some of my recent projects:</p>
+		<p>Take a look at some of my recent projects.</p>
 		<h3><a href="http://sound-ocean.com" target="_blank">Sound Ocean</a></h3>
-		<h6 class="project-techs">Technologies: KineticJS, KeyboardJS, HTML5 Audio, SoundCloud API, Ruby on Rails</h6>
-		<p>Sound-Ocean provides a unique interactive music discovery experience by allowing the user to first choose a genre and then "swim through the ocean of sound," discovering songs streaming from the SoundCloud api. The user can save songs to a playlist and compete with friends for the most songs discovered. Three people worked on the project. I contributed the interactive visual elements as well as integrating with the SoundCloud API, the bulk of which was completed in one week.</p>
+		<h4 class="project-techs"><small>Technologies: KineticJS, KeyboardJS, HTML5 Audio, SoundCloud API, Ruby on Rails</small></h4>
+		<p>Sound Ocean provides a unique interactive music discovery experience by allowing the user to first choose a genre and then "swim through the ocean of sound," discovering songs streaming from the SoundCloud API. The user can save songs to a playlist and compete with friends for the most songs discovered. Three people worked on the project. I contributed the interactive visual elements as well as integrating with the SoundCloud API, the bulk of which was completed in one week.</p>
 
 		<h3><a href="http://abcrowd-composers.herokuapp.com" target="_blank">ABCrowd Composers</a></h3>
-		<h6 class="project-techs">Technologies: PostgresQL, Ruby on Rails, jQuery</h6>
-		<p>Crowd-Sourced music creation platform for educational songs. Through highly-relational postgres database models, users can edit and create their own original lyrics for educational songs about any topic. I created a version control system from the ground up so that users could save their own versions of songs and vote on the best to arrive at the definitive version.</p>
+		<h4 class="project-techs"><small>Technologies: PostgresQL, Ruby on Rails, jQuery</small></h4>
+		<p>Crowdsourced music creation platform for educational songs. Through highly-relational postgres database models, users can edit and create their own original lyrics for educational songs about any topic. I created a version control system from the ground up so that users could save their own versions of songs and vote on the best to arrive at the definitive version.</p>
 
 		<h3><a href="http://movemywords.com" target="_blank">Move My Words</a></h3>
-		<h6 class="project-techs">Technologies: D3.js, Ruby on Rails, jQuery</h6>
+		<h4 class="project-techs"><small>Technologies: D3.js, Ruby on Rails, jQuery</small></h4>
 		<p>We've all been moved by words. Why not move them back? Move My Words is an interactive blogging platform that allows a user to enter a micropost and play interactive games with the text through the use of D3 text visualization.</p>
 
 	</div>
